--- a/site.yml
+++ b/site.yml
@@ -53,13 +53,13 @@
         line: net.bridge.bridge-nf-call-iptables = 1
 
     - name: "Disable SWAP"
-      command: swapoff -a
+      shell: swapoff -a
 
     - name: "Disable SWAP permanently"
       replace:
         path: /etc/fstab
-        regexp: '^([^#].*?\sswap\s+sw\s+.*)$'
-        replace: '# \1'
+        regexp: '^.*swap.*$'
+        replace: ''
 
     - name: "Enable and start Docker"
       systemd:
@@ -67,40 +67,50 @@
         enabled: yes
         state: started
 
-    - name: "Enable and start kubelet"
+    - name: "Enable kubelet"
       systemd:
         name: kubelet
         enabled: yes
-        state: started
 
     - name: "Setup master"
       when: "inventory_hostname in groups['master']"
       block:
         - name: "Check if cluster is already running on host"
-          command: kubectl get cs
+          shell: kubectl cluster-info
+          environment:
+            KUBECONFIG: /etc/kubernetes/admin.conf
           register: cluster_status
           ignore_errors: true
 
         - name: "Create cluster"
-          when: "'Healthy' not in cluster_status.stdout"
-          command: kubeadm init
+          when: "'running' not in cluster_status.stdout"
+          shell: kubeadm init --pod-network-cidr={{ pod_network_cidr }}
           register: kubeadm_output
 
-        - name: "Check if /etc/kubernetes/admin.conf exists"
-          stat:
-            path: /etc/kubernetes/admin.conf
-          register: conf_stat
+        - name: "Install network add-on"
+          when: install_network
+          shell: kubectl apply -f {{ yaml_url }}
+          environment:
+            KUBECONFIG: /etc/kubernetes/admin.conf
 
-        - name: "Create ~/.kube"
-          file:
-            path: ~/.kube
-            state: directory
+        - name: "Create join token"
+          shell: kubeadm token create --print-join-command 2>/dev/null
+          environment:
+            KUBECONFIG: /etc/kubernetes/admin.conf
+          register: create_output
 
-        - name: "Copy admin.conf to user home"
-          when: conf_stat.stat.exists
-          copy:
-            dest: ~/.kube/config
-            src: /etc/kubernetes/admin.conf
-            owner: "{{ ansible_user }}"
-            force: yes
-            remote_src: yes
+    - name: "Save kubeadm join command from master"
+      set_fact:
+        kubeadm_join_command: "{{ hostvars['master01']['create_output']['stdout']|default('') }}"
+
+    - name: "Setup workers"
+      when: "inventory_hostname in groups['worker']"
+      block:
+        - name: "Check if worker is already running"
+          systemd:
+            name: kubelet
+          register: kubelet_status
+
+        - name: "Run kubeadm join"
+          when: "kubelet_status.status['ActiveState'] == 'inactive'"
+          shell: "{{ kubeadm_join_command }}"
