--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -3,3 +3,13 @@ kubernetes_repo_baseurl: "https://packages.cloud.google.com/yum/repos/kubernetes
 kubernetes_repo_gpgkey: "https://packages.cloud.google.com/yum/doc/yum-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg"
 docker_repo_baseurl: "https://download.docker.com/linux/centos/7/x86_64/stable"
 docker_repo_gpgkey: "https://download.docker.com/linux/centos/gpg"
+packages:
+  - yum-utils
+  - device-mapper-persistent-data
+  - lvm2
+  - docker-ce
+  - docker-ce-cli
+  - kubeadm
+  - kubelet
+  - kubectl
+  - kubernetes-cni
