--- a/group_vars/master/main.yml
+++ b/group_vars/master/main.yml
@@ -1,18 +1,10 @@
 ---
-packages:
-  - yum-utils
-  - device-mapper-persistent-data
-  - lvm2
-  - docker-ce
-  - docker-ce-cli
-  - containerd.io
-  - kubeadm
-  - kubelet
-  - kubectl
-
 ports:
   - 6443/tcp
   - 2379-2380/tcp
   - 10250/tcp
   - 10251/tcp
   - 10252/tcp
+pod_network_cidr: 192.168.0.0/16
+install_network: True
+yaml_url: https://docs.projectcalico.org/manifests/calico.yaml
